[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/heavycopper.otf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://Assets/DEATHTAKER_-_13_-_Worldwide_Genocide.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Damnation_Reign_-_15_-_Shadow_of_a_Dark_Queen.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Game Over Label" type="Label" parent="."]
visible = false
margin_left = 354.0
margin_top = 297.0
margin_right = 945.0
margin_bottom = 434.0
custom_fonts/font = SubResource( 1 )
text = "Game over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life Label" type="Label" parent="."]
visible = false
margin_left = 32.0
margin_top = 28.0
margin_right = 373.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 2 )
text = "Lifes: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score Label" type="Label" parent="."]
visible = false
margin_left = 845.0
margin_top = 23.0
margin_right = 1087.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 2 )
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainButton" type="Button" parent="."]
visible = false
margin_left = 399.1
margin_top = 563.879
margin_right = 804.1
margin_bottom = 632.879
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Try again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="."]
margin_left = 306.299
margin_top = 324.954
margin_right = 951.299
margin_bottom = 513.954
custom_fonts/font = SubResource( 3 )
text = "Sterowanie:
PPM - teleportacja
LPM - cios katana
masz tylko jeden cios katana na  jedna teleportacje!

Punktacja:
1 sek = 1 pkt
zabicie przeciwnika = 10 pkt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 305.346
margin_top = 114.0
margin_right = 981.346
margin_bottom = 317.0
custom_fonts/font = SubResource( 1 )
text = "*Teleports
behind you*"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="."]
margin_left = 432.512
margin_top = 562.435
margin_right = 770.512
margin_bottom = 631.435
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
[connection signal="pressed" from="TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="NewGameButton" to="." method="_on_NewGameButton_pressed"]
